# dtool-cli

./: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile
docs/source/: conf.py
dtool_cli/: __init__.py  cli.py
tests/: test_dtool-cli_package.py  test_dtool_cli_module.py  test_validators.py
